apps/evan-dexcom-client/bluey/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evan-dexcom-client
spec:
  selector:
    matchLabels:
      app: evan-dexcom-client
  template:
    metadata:
      labels:
        app: evan-dexcom-client
    spec:
      containers:
      - image: docker.io/babyraptor/evan-dexcom-client:7bcc723
        imagePullPolicy: IfNotPresent
        name: evan-dexcom-client
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
