apps/evan-dexcom-client/bluey/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: evan-dexcom-client
  namespace: evan-dexcom-client
spec:
  ingressClassName: nginx
  rules:
    - host: evan-dexcom-client.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evan-dexcom-client
                port:
                  name: web
